test/lib_library.l1.out
In main
in lib1
Running f1 from lib1
In lib2: Running f1 from lib1
Finished lib2
Running f1 from lib2
Running f4 from lib2
Running f2 from lib1
finished with lib1
Running f1 from lib1
Running f1 from lib2
Running f4 from lib2
Running f2 from lib1
error: could not find library: lib_
               error	(builtin function)
                anon	(/.ccs/u02/ajpark2/projects/l1-lib/lib/library.cqct:57)
              applyk	(builtin function)
               entry	(lib_library.l1:20)
Successfully caused an error
error: main depends non-existent lib1.f2_
               error	(builtin function)
                anon	(/.ccs/u02/ajpark2/projects/l1-lib/lib/library.cqct:106)
              applyk	(builtin function)
               entry	(lib_library.l1:24)
Successfully caused an error
